--- a/.devcontainer/arduino-cli.yaml
+++ b/.devcontainer/arduino-cli.yaml
@@ -6,8 +6,8 @@ compile:
     # - zero         # SAMD covered by M4
     # - leonardo     # AVR covered by UNO
     - m4
-    # - esp32        # errors on OneWire =>  util/crc16.h  vs  rom/crc.h
-    # - esp8266
+    - esp32  
+    - esp8266
     # - mega2560     # AVR covered by UNO
 unittest:
   # These dependent libraries will be installed
